# rockysmithereens

./: Cargo.toml  README.md  convert_wem_files_to_ogg.sh  manifest.json
.github/workflows/: rust.yml
crates/bnk/: Cargo.toml
crates/bnk/src/: error.rs  lib.rs
crates/psarc/: Cargo.toml
crates/psarc/src/: error.rs  lib.rs  utils.rs
crates/psarc/tests/: test.rs
crates/rockysmithereens_parser/: Cargo.toml
crates/rockysmithereens_parser/src/: error.rs  level.rs  lib.rs  manifest.rs  note.rs  song.rs  song_xml.rs  xblock.rs
crates/rodio_wem/: Cargo.toml
crates/rodio_wem/src/: codebook.rs  error.rs  lib.rs  packet.rs  utils.rs
rockysmithereens/: Cargo.toml
rockysmithereens/src/: asset.rs  event.rs  filesystem.rs  game.rs  main.rs  note.rs  note_view.rs  player.rs  preview.rs  wem.rs
rockysmithereens/src/ui/: arrangement_select.rs  filetree.rs  home.rs  in_game.rs  list.rs  mod.rs  notes_plot.rs  phrases_plot.rs  playing.rs  profiling.rs  song_select.rs  tab_view.rs
src/: main.rs  player.rs
tools/cli_music_player/: Cargo.toml
tools/cli_music_player/src/: main.rs
tools/psarc_extract/: Cargo.toml
tools/psarc_extract/src/: main.rs  ogg.rs
