[workspace]
members = ["rockysmithereens", "crates/*", "tools/*"]
default-members = ["rockysmithereens", "tools/psarc_extract", "tools/cli_music_player"]

# Don't make debug builds painfully slow
[profile.dev]
opt-level = 1

# Always run release versions of slow crates
[profile.dev.package."*"]
opt-level = 3
