[workspace]
members = ["rockysmithereens", "crates/*", "tools/*"]
default-members = ["rockysmithereens", "tools/psarc_extract", "tools/cli_music_player"]
resolver = "2"

[workspace.dependencies]
miette = "5.10.0"
rodio = { version = "0.17.3", default-features = false, features = ["vorbis"] }
thiserror = "1.0.50"

# Don't make debug builds painfully slow
[profile.dev]
opt-level = 1

# Always run release versions of slow crates
[profile.dev.package."*"]
opt-level = 3
