[package]
name = "rockysmithereens"
version = "0.1.0"
edition = "2021"
default-run = "rockysmithereens"

[features]
default = ["profile"]
profile = ["dep:puffin_http", "profiling/profile-with-puffin"]

[dependencies]
rodio_wem = { path = "../crates/rodio_wem" }
rockysmithereens_parser = { path = "../crates/rockysmithereens_parser" }

rodio.workspace = true
miette.workspace = true

pixel-game-lib = { version = "0.4.1", default-features = false, features = ["embedded-assets", "default-font"] }
taffy = "0.3.18"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "sync"] }
rfd = "0.12.1"
profiling = "1.0.11"

puffin_http = { version = "0.15.0", optional = true }
