[package]
name = "rockysmithereens"
version = "0.1.0"
edition = "2021"
default-run = "rockysmithereens"

[features]
default = []
profiling = ["dep:puffin", "dep:puffin_http", "rodio_wem/profiling", "rockysmithereens_parser/profiling"]

[dependencies]
rodio_wem = { path = "../crates/rodio_wem" }
rockysmithereens_parser = { path = "../crates/rockysmithereens_parser" }

rodio.workspace = true
miette.workspace = true

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
rfd = "0.12"
itertools = "0.12"
ratatui = "0.25"
crossterm = "0.27"
vek = "0.16"
camino = "1"

puffin = { version = "0.18", optional = true }
puffin_http = { version = "0.15", optional = true }
