[package]
name = "bnk"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1.1"
profiling = { version = "1.0.6", optional = true }
thiserror = "1.0.59"

[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]
