[package]
name = "psarc"
version = "0.1.0"
edition = "2021"

[features]
default = []
profiling = ["dep:puffin"]

[dependencies]
thiserror.workspace = true

nom = "7.1.3"
semver = "1.0.20"
aes = "0.8.3"
cfb-mode = "0.8.2"
hex-literal = "0.3.4"
flate2 = "1.0.28"
log = "0.4.20"
puffin = { version = "0.18", optional = true }
