[package]
name = "psarc"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1.1"
semver = "1.0.13"
thiserror = "1.0.59"
aes = "0.8.1"
cfb-mode = "0.8.1"
hex-literal = "0.3.4"
flate2 = "1.0.24"
log = "0.4.17"
profiling = { version = "1.0.6", optional = true }

[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]
