[package]
name = "rockysmithereens_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
psarc = { path = "../psarc" }
rodio_wem = { path = "../rodio_wem" }
bnk = { path = "../bnk" }
quick-xml = { version = "0.23.1", features = ["serialize"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
profiling = "1.0.11"

[features]
profile-with-puffin = ["profiling/profile-with-puffin", "rodio_wem/profile-with-puffin", "psarc/profile-with-puffin", "bnk/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick", "rodio_wem/profile-with-optick", "psarc/profile-with-optick", "bnk/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal", "rodio_wem/profile-with-superluminal", "psarc/profile-with-superluminal", "bnk/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing", "rodio_wem/profile-with-tracing", "psarc/profile-with-tracing", "bnk/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy", "rodio_wem/profile-with-tracy", "psarc/profile-with-tracy", "bnk/profile-with-tracy"]
