[package]
name = "rockysmithereens_parser"
version = "0.1.0"
edition = "2021"

[features]
default = []
profiling = ["dep:puffin", "rodio_wem/profiling", "psarc/profiling", "bnk/profiling"]

[dependencies]
psarc = { path = "../psarc" }
rodio_wem = { path = "../rodio_wem" }
bnk = { path = "../bnk" }

quick-xml = { version = "0.23.1", features = ["serialize"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"

puffin = { version = "0.18", optional = true }
