[package]
name = "rodio_wem"
version = "0.1.0"
edition = "2021"

[features]
default = []
profiling = ["dep:puffin"]

[dependencies]
rodio.workspace = true
thiserror.workspace = true

bitvec = "1.0.1"
byteorder = "1.5.0"
#lewton = "0.10.2"
lewton = { git = "https://github.com/tversteeg/lewton.git", branch = "clone" }
nom = "7.1.3"
puffin = { version = "0.18", optional = true }
