[package]
name = "rodio_wem"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
byteorder = "1.4.3"
#lewton = "0.10.2"
lewton = { git = "https://github.com/tversteeg/lewton.git", branch = "clone" }
nom = "7.1.1"
profiling = { version = "1.0.6", optional = true }
rodio = { version = "0.19.0", default-features = false, features = ["vorbis"] }
thiserror = "1.0.32"

[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]
