[package]
name = "cli_music_player"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio_wem = { path = "../../crates/rodio_wem" }
rockysmithereens_parser = { path = "../../crates/rockysmithereens_parser" }

anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive"] }
env_logger = "0.9.0"
rodio = { version = "0.19.0", default-features = false, features = ["lewton", "vorbis"] }
